force-app/main/default/objects/Lightning_Actions_Configuration__mdt/Lightning_Actions_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Lightning Actions Configuration</label>
    <pluralLabel>Lightning Actions Configurations</pluralLabel>
</CustomObject>