force-app/main/default/objects/Lightning_Actions_Configuration__mdt/fields/Class_Method__c.field-meta.xml
<CustomField>
    <fullName>Class_Method__c</fullName>
    <label>Class Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>