force-app/main/default/objects/Lightning_Actions_Configuration__mdt/fields/Show_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Show_Record_Types__c</fullName>
    <description>Use this field to show button on which record type</description>
    <inlineHelpText>Add Comma Separate Record Type API Name</inlineHelpText>
    <label>Show Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>