force-app/main/default/objects/Lightning_Actions_Configuration__mdt/fields/Validation_Method__c.field-meta.xml
<CustomField>
    <fullName>Validation_Method__c</fullName>
    <label>Validation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>