force-app/main/default/objects/Lightning_Actions_Configuration__mdt/fields/Validation_Required__c.field-meta.xml
<CustomField>
    <fullName>Validation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Required?</label>
    <type>Checkbox</type>
</CustomField>